<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f1b4d3f1"
    tools:context="mx.edu.utng.dsoria.telefoniastrategy.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_compania"
        android:textSize="30dp"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/opciones"
        android:id="@+id/cmb_opciones">
    </Spinner>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_minutos_local"
        android:textSize="30dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/txt_minutos_local"
        android:textSize="30dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_minutos_ld"
        android:textSize="30dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/txt_minutos_ld"
        android:textSize="30dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/texto_calcular"
            android:textColor="#a8b338b3"
            android:textSize="20dp"
            android:background="#642371ae"
            android:id="@+id/btn_calcular" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_limpiar"
            android:textColor="#a8b338b3"
            android:textSize="20dp"
            android:background="#642371ae"
            android:id="@+id/btn_limpiar" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_total"
        android:textSize="30dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:id="@+id/txt_total"
        android:textSize="30dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_mostrar_creditos"
        android:textColor="#a8b338b3"
        android:textSize="20dp"
        android:background="#642371ae"
        android:id="@+id/btn_mostrar"
        />


</LinearLayout>
