<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1e2020">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#beb5b5"
        android:text="@string/texto_nombre"
        android:textAlignment="center"
        android:textSize="40dp"></TextView>
    <TextView
        android:layout_width="10dp"
        android:layout_height="30dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#beb5b5"
        android:text="@string/texto_grupo"
        android:textAlignment="center"
        android:textSize="40dp"></TextView>
    <TextView
        android:layout_width="10dp"
        android:layout_height="30dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#beb5b5"
        android:text="@string/texto_asignatura"
        android:textAlignment="center"
        android:textSize="40dp"></TextView>

</LinearLayout>